# LinuxDev2020

./: .gitignore  LICENSE
03_TerminalProject/: Makefile  Show.c
04_Multifile/: Makefile  fun.c  prog.c
05_Environmental/: CMakeLists.txt  rewin.c
06_Debugging/: double-free.c
07_DebuggingTracing/: Makefile  wrapper.c
08_TestingCoverage/: Makefile.am  configure.ac
08_TestingCoverage/src/: Makefile  Makefile.am  libbuf.c  libbuf.h  tests.c
08_TestingCoverage/tests/: Makefile.am  test2.ts  testgtp.ts  testnp.ts
09_I18nL10n/: Makefile.am  configure.ac  gueRu.po  guess.c  guess.pot
10_Documenting/: Doxyfile.in  Makefile.am  configure.ac
10_Documenting/src/: Makefile.am  gueRu.po  guess.c  guess.h  guess.md  guess.pot
11_Toolkits/: Makefile.am  configure.ac  hash.c  in.txt
12_ScriptingText/: Makefile.am  configure.ac  guess.c  guess.h
13_PatchInstall/: Makefile.am  configure.ac  gueRu.po  guess.c
